fix: 修正模块化 opens 指令并完善技能元数据
- 修正 module-info.java 中 opens model to javafx.base -> javafx.controls（PropertyValueFactory 反射访问）
- 新增 Application.java 和 Repository.java 模板（中英双语）
- SKILL.md frontmatter 补充 license/compatibility/metadata 字段
- README 移除重复 Installation 段落，修正 YOUR_USERNAME 占位符和 Shared 描述
- third-party-libraries.md 修正 TestFX 断言文本与 asString 格式一致
- packaging-deployment.md 补充 7.6 空标题正文，修正标题层级
- architecture-patterns.md 移除冗余空标题，Spring Boot 版本 3.4.0 -> 3.5.0
- EVALUATE.md 同步修正 opens 指令